# garbage

./: README.md  main.go
chainer/: actions.go  chainer.go  main.go  main_test.go
chainer/main/: main.go
conio/: action.go  actionMap.go  actionMode.go  border.go  color.go  event.go  eventStream.go  events.go  keyboard.go  keys.go  main.go  screen.go
qmk/: .gitignore  CMakeLists.txt
qmk/sources/: main.cpp
qmk/src/: bitmapfont.cpp  bitmapfont.h  keyboard.cpp  keyboard.h  keycode.h  keys.h  main.cpp  qmk.cpp  qmk.h
sdf/application/: application.go  errors.go  input.go  syswindow.go
sdf/channel/: muxer.go
sdf/msg/: common.go  message.go  result.go  window.go
sdf/rake/: application.go  message.go  syswindow.go
sdf/sdf/: sdf.go
sdf/test/: main.go
thompson/: elements.go  iterator.go  main.go  parser.go  rules.go  runner.go  thompson.go  viztools.go  vizualize.go
thompson/errors/: errors.go
thompson/iterator/: iterator.go
tpool/: main.go
tpool/tpool/: pool.go  rakes.go
utils/: assert.go  math.go  segment.go
zlog/: log.go  logger.go  loglevel.go  main.go  print.go  style.go
zlog/old/: builder.go  log.go  logger.go  loglevel.go
zlog/test/: main.go
